Bug 1544530 - [sync 132] - Fixed Horizontal scrolling in the debugger secondary panel r=jlast
Differential Revision: https://phabricator.services.mozilla.com/D27714

--HG--
extra : moz-landing-system : lando

--- a/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoints.css
@@ -2,6 +2,10 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
+.breakpoints-pane > ._content {
+  overflow-x: auto;
+}
+
 .breakpoints-toggle {
   margin: 2px 3px;
 }
